--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     </script>
     <style>
-      body { background-color: #f8fafc; margin: 0; padding: 0; }
+      body { background-color: #f8fafc; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
       .gradient-text {
         background-clip: text;
         -webkit-background-clip: text;
@@ -39,7 +39,22 @@
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fadeIn { animation: fadeIn 0.4s ease-out forwards; }
+      #error-display { 
+        display: none; position: fixed; inset: 0; background: #fff; z-index: 9999; 
+        padding: 2rem; color: #ef4444; font-family: monospace; overflow: auto;
+      }
     </style>
+    <!-- Error Catcher to prevent "Silent White Screens" -->
+    <script>
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        const display = document.getElementById('error-display');
+        if (display) {
+          display.style.display = 'block';
+          display.innerHTML = `<h1>Critical Error</h1><pre>${msg}\nLine: ${lineNo}\nCol: ${columnNo}\n\nStack: ${error ? error.stack : 'N/A'}</pre>`;
+        }
+        return false;
+      };
+    </script>
     <script type="importmap">
 {
   "imports": {
@@ -56,6 +71,7 @@
 </script>
 </head>
 <body>
+    <div id="error-display"></div>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
 </body>
