--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fadeIn { animation: fadeIn 0.4s ease-out forwards; }
-      #error-display { 
+      #error-boundary-ui { 
         display: none; position: fixed; inset: 0; background: #fff; z-index: 9999; 
         padding: 2rem; color: #ef4444; font-family: monospace; overflow: auto;
       }
     </style>
-    <!-- Error Catcher to prevent "Silent White Screens" -->
     <script>
-      window.onerror = function(msg, url, lineNo, columnNo, error) {
-        const display = document.getElementById('error-display');
-        if (display) {
-          display.style.display = 'block';
-          display.innerHTML = `<h1>Critical Error</h1><pre>${msg}\nLine: ${lineNo}\nCol: ${columnNo}\n\nStack: ${error ? error.stack : 'N/A'}</pre>`;
+      // Global error catcher to debug Vercel deployment issues
+      window.onerror = function(msg, url, line, col, error) {
+        console.error(error);
+        const ui = document.getElementById('error-boundary-ui');
+        if (ui) {
+          ui.style.display = 'block';
+          ui.innerHTML = `<h1>Application Error</h1><p>${msg}</p><pre>${error ? error.stack : ''}</pre>`;
         }
-        return false;
       };
     </script>
     <script type="importmap">
@@ -71,7 +71,7 @@
 </script>
 </head>
 <body>
-    <div id="error-display"></div>
+    <div id="error-boundary-ui"></div>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
 </body>
