--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI EduPilot: Teacher's Guide</title>
+    <title>AI EduPilot: VVUHSD Teacher's Guide</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script>
@@ -16,7 +16,6 @@
             },
             colors: {
               'pilot-blue': '#2563EB',
-              'pilot-gold': '#F59E0B',
               'pilot-purple': '#9333EA',
               'pilot-dark': '#0F172A',
             }
@@ -25,7 +24,7 @@
       }
     </script>
     <style>
-      body { background-color: #f8fafc; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
+      body { background-color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden; }
       .gradient-text {
         background-clip: text;
         -webkit-background-clip: text;
@@ -68,7 +67,7 @@
         const ui = document.getElementById('error-ui');
         if (ui) {
           ui.style.display = 'block';
-          ui.innerHTML = `<h1>Critical Error</h1><p>${msg}</p><pre>${error ? error.stack : ''}</pre>`;
+          ui.innerHTML = `<h1>Critical Deployment Error</h1><p>${msg}</p><pre>${error ? error.stack : ''}</pre>`;
         }
       };
     </script>
