--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script>
-      // POLYFILL: Prevent ReferenceError: process is not defined
+      // POLYFILL: Prevent ReferenceError: process is not defined in browser
       window.process = window.process || { env: {} };
       
       tailwind.config = {
@@ -41,10 +41,6 @@
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fadeIn { animation: fadeIn 0.4s ease-out forwards; }
-      #error-ui { 
-        display: none; position: fixed; inset: 0; background: #fff; z-index: 9999; 
-        padding: 2rem; color: #ef4444; font-family: monospace; overflow: auto;
-      }
     </style>
     <script type="importmap">
 {
@@ -62,26 +58,7 @@
 </script>
 </head>
 <body>
-    <div id="error-ui"></div>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
-    <script>
-      window.onerror = function(msg, url, line, col, error) {
-        const ui = document.getElementById('error-ui');
-        if (ui) {
-          ui.style.display = 'block';
-          ui.innerHTML = `
-            <div style="max-width: 600px; margin: auto; padding-top: 50px;">
-              <h1 style="color: #1e293b;">Application Error</h1>
-              <p style="color: #64748b;">The application failed to load. This is often due to a script resolution error.</p>
-              <div style="background: #f1f5f9; padding: 15px; border-radius: 8px; border-left: 4px solid #ef4444;">
-                <code>${msg}</code>
-              </div>
-              <button onclick="location.reload()" style="margin-top: 20px; padding: 10px 20px; background: #2563eb; color: white; border: none; border-radius: 6px; cursor: pointer;">Reload Page</button>
-            </div>
-          `;
-        }
-      };
-    </script>
 </body>
 </html>
