--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI EduPilot: VVUHSD Teacher's Guide</title>
+    <title>AI EduPilot | VVUHSD</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script>
-      // POLYFILL: Prevent ReferenceError: process is not defined in browser
-      window.process = window.process || { env: {} };
-      
+      window.process = { env: {} };
       tailwind.config = {
         theme: {
           extend: {
@@ -27,7 +25,7 @@
       }
     </script>
     <style>
-      body { background-color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden; }
+      body { background-color: #f8fafc; margin: 0; padding: 0; }
       .gradient-text {
         background-clip: text;
         -webkit-background-clip: text;
@@ -35,7 +33,6 @@
         background-image: linear-gradient(to right, #2563EB, #9333EA);
       }
       .no-scrollbar::-webkit-scrollbar { display: none; }
-      .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
